# examfinder

./: .gitignore  LICENSE  README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  app.css
client/src/lib/: ExamTable.svelte  api.ts
server/: .env  Cargo.toml  redis.conf
server/src/: db.rs  error.rs  exam.rs  headers.rs  main.rs  scraper.rs
server/src/scraper/: mathsoc.rs  mathsoc_services.rs
