[package]
name = "examfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = { version = "0.5.15", features = ["headers"] }
chrono = "0.4.22"
dotenvy = "0.15.1"
hyper = "0.14.20"
once_cell = "1.13.1"
redis = { version = "0.21.5", features = ["tokio-comp"] }
regex = "1.6.0"
reqwest = "0.11.11"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
